--- a/index.ipynb
+++ b/index.ipynb
@@ -235,9 +235,8 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "\n",
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
-    "    names_and_ranks = names_and_ranks.append(append_phrase)"
+    "    namnames_and_ranks.append(append_phrase)"
    ]
   },
   {
