--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
     "for index in list(range(len(city_names))):\n",
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
     "    names_and_ranks.append(append_phrase)\n",
-    "    "
+    "list"
    ]
   },
   {
