--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -230,25 +230,13 @@
       "11 .  Solta\n",
       "12 .  Iguazu Falls\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None, None, None, None, None, None, None, None, None]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
     "    append_phrase = print(index+1, \". \", city_names[index])\n",
-    "    names_and_ranks.append(append_phrase)\n",
-    "    list(names_and_ranks)\n",
-    "names_and_ranks = "
+    "    names_and_ranks.append(append_phrase)"
    ]
   },
   {
